Fix top header wrapping on mobile

--- a/axelor-web/src/main/webapp/css/main.css
+++ b/axelor-web/src/main/webapp/css/main.css
@@ -83,7 +83,7 @@ header .nav-menu-bar li.empty > a > i {
 
 header .nav-menu-bar li.empty > a,
 header .navbar .nav-shortcuts > li > a {
-	padding: 9px 6px 10px;
+	padding: 9px 5px 10px;
 }
 
 header .nav-menu-bar li > a > img {
